# project_so

./: CMakeLists.txt  Makefile  inputFile1.txt
core/: keys.h  transaction.h
exec/: main  master
function_main/: messageQueue.c  messageQueue.h  semaphores.c  semaphores.h  shmMasterBook.c  shmMasterBook.h
function_supp/: creationBook.c  creationBook.h  nodeUtility.c  nodeUtility.h  readInputFile.c  readInputFile.h  shmFunctions.c  shmFunctions.h  shmMasterBook.c  shmMasterBook.h  suppUtility.c  suppUtility.h  support.h
main/: main.c  main.h  master.c  node.c  user.c
